Added covid update tile and experimental tooltip warning

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,8 +30,10 @@
   </style>
   <link rel="preload" href="{{ '/assets/css/main.css' | relative_url }}" as="style" onload="this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"></noscript>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript">
    {% include loadCss.js %}
   </script>
+  <script type="text/javascript" src="{{ '/assets/js/covid_update.js' | relative_url }}"></script>
   <!-- <script src="{{ '/assets/js/pixi.min.js' | relative_url }}"></script> -->
 </head>
