--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,12 +33,14 @@ layout: compress
           <br>CANADA
         </p>
       </div>
+
     </div>
 
     <main class="site__content">
       <section class="blog">
         <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
           <div class="dates-container">
+            {% include covid_card.html %}
             {% include dates.html %}
           </div>
           <div class="cards-container">
