--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,6 +23,7 @@
 @import "components/_pagination.scss";
 @import "components/_syntax.scss";
 @import "components/_table.scss";
+@import "components/_covid_update.scss";
 
 // layout
 
