--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -1,13 +1,13 @@
 .hero__home {
   margin: 80px auto 0;
-  min-height: 17rem;
+  min-height: 16.1rem;
   width: 100%;
   position: relative;
   background-color: #dde5ea;
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
-  height: 20rem;
+  // height: 20rem;
   // @include breakpoint(0) {
   //   // margin: 0 auto;
   //   height: 20em;
@@ -18,6 +18,9 @@
   //   height: auto;
   //   min-height: 16.25rem;
   // }
+  @include breakpoint($lg) {
+    height: 20rem;
+  }
 
 }
 
@@ -82,7 +85,7 @@
     }
   }
   @include breakpoint($md) {
-    padding-top: 40px;
+    padding-top: 14px;
     .hero__title {
       font-size: 1.9em;
       line-height: 32px;
