Added max-width to main body home page content

--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -138,7 +138,7 @@
   flex-wrap: wrap;
   // flex: 1 0 auto;
   margin: 0 2.25rem;
-
+  max-width: 1200px;
   @include breakpoint($md) {
     // padding-top: 5em;
   }
