Update tutorial submit and notify dates

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -14,9 +14,9 @@
           <tr><td>Music Submission</td><td>29 May 2020</td></tr>
           <tr><td>Music Notification</td><td>15 July 2020</td></tr>
           <tr><td></td><td></td></tr>
-          <tr><td>Call for Tutorials</td><td>25 February 2020</td></tr>
-          <tr><td>Tutorials Submission</td><td>30 April 2020</td></tr>
-          <tr><td>Tutorials Notification</td><td>31 May 2020</td></tr>
+          <tr><td>Call for Tutorials</td><td>Accepting submissions</td></tr>
+          <tr><td>Tutorials Submission</td><td style="text-decoration: line-through;">30 April 2020</td><td>22 May 2020</td></tr>
+          <tr><td>Tutorials Notification</td><td style="text-decoration: line-through;">31 May 2020</td><td>15 June 2020</td></tr>
         </tbody>
       </table>
     </div>
