Responsive table update on sponsor page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,9 @@
   </style>
   <link rel="preload" href="{{ '/assets/css/main.css' | relative_url }}" as="style" onload="this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"></noscript>
+  <link rel="stylesheet" href="{{ '/assets/css/tablesaw.css' | relative_url }}">
+  <script src="{{ '/assets/js/tablesaw.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/tablesaw-init.js' | relative_url }}"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript">
    {% include loadCss.js %}
