--- a/_sass/components/_table.scss
+++ b/_sass/components/_table.scss
@@ -19,3 +19,85 @@ table {
     border: 1px solid $border;
   }
 }
+
+/* Variables
+================================== */
+$bw: 3px;  // border width
+
+
+/* Tables
+================================== */
+.Rtable {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 3em 0;
+  padding: 0;
+}
+.Rtable-cell {
+  box-sizing: border-box;
+  flex-grow: 1;
+  width: 100%;  // Default to full width
+  padding: 0.8em 1.2em;
+  overflow: hidden; // Or flex might break
+  list-style: none;
+  border: 1px solid #ededed;
+  background: fade(slategrey,20%);
+  > h1, > h2, > h3, > h4, > h5, > h6 { margin: 0; }
+  &.platinum {
+    background: #d7d7d7;
+  }
+  &.gold {
+    background: #c9b037;
+  }
+  &.silver {
+    background: #b4b4b4;
+  }
+  &.bronze {
+    background: #ad8a56;
+  }
+  // &.wimir1 {
+  //   background: #dd5466ee;
+  // }
+  // &.wimir2 {
+  //   background: #dd5466bb;
+  // }
+  // &.wimir3 {
+  //   background: #dd546677;
+  // }
+  // &.wimir4 {
+  //   background: #dd546633;
+  // }
+}
+
+/* Table column sizing
+================================== */
+.Rtable--2cols > .Rtable-cell  { width: 50%; }
+.Rtable--3cols > .Rtable-cell  { width: 33.33%; }
+.Rtable--4cols > .Rtable-cell  { width: 25%; }
+.Rtable--5cols > .Rtable-cell  { width: 20%; }
+.Rtable--6cols > .Rtable-cell  { width: 16.6%; }
+
+$breakpoint: 500px;
+
+/* Responsive
+==================================== */
+@media all and (max-width: $breakpoint) {
+  .Rtable--collapse  {
+    display: block;
+    > .Rtable-cell { width: 100% !important; }
+    > .Rtable-cell--foot { margin-bottom: 1em; }
+  }
+  .empty {
+    display: none;
+  }
+  .Rtable-cell--head {
+    margin-top: 20px;
+  }
+}
+
+// Non-Flex modernizer fallback
+.no-flexbox .Rtable {
+  display: block;
+  > .Rtable-cell { width: 100%; }
+  > .Rtable-cell--foot { margin-bottom: 1em; }
+}
