WiMIR table style updates

--- a/_sass/components/_table.scss
+++ b/_sass/components/_table.scss
@@ -55,6 +55,10 @@ $bw: 3px;  // border width
   &.bronze {
     background: #ad8a56;
   }
+  &.wimir {
+    background: #dd5466;
+    h4 {color: white;}
+  }
   // &.wimir1 {
   //   background: #dd5466ee;
   // }
