Updated front page padding and added sponsors card

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,6 +51,7 @@ layout: compress
                 {% include card.html %}
               {% endfor %}
             </div>
+            {% include sponsors.html %}
           </div>
           <!-- {% include card.html title="The Event" %} -->
 
