Adding cochlear as a sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -14,6 +14,9 @@
     </div>
     <h3 class="bronze title">Bronze Sponsors</h3>
     <div class="bronze-wrapper">
+      <a href="https://cochlear.ai/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Cochlear.png"
+      </a>
     </div>
   </div>
 </div>
