--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -15,7 +15,7 @@
     <h3 class="bronze title">Bronze Sponsors</h3>
     <div class="bronze-wrapper">
       <a href="https://cochlear.ai/">
-        <img src="{{ site.baseurl }}/assets/img/sponsors/Cochlear.png"
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Cochlear.png">
       </a>
     </div>
   </div>
