--- a/_sass/components/_table.scss
+++ b/_sass/components/_table.scss
@@ -44,10 +44,23 @@ $bw: 3px;  // border width
   background: fade(slategrey,20%);
   > h1, > h2, > h3, > h4, > h5, > h6 { margin: 0; }
   &.platinum {
-    background: #d7d7d7;
+    // background: #d7d7d7;
+    background-image: -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0)   6%, hsla(0,0%,100%, .1) 7.5%),
+      -webkit-repeating-linear-gradient(left, hsla(0,0%,  0%,0) 0%, hsla(0,0%,  0%,0)   4%, hsla(0,0%,  0%,.03) 4.5%),
+      -webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%, hsla(0,0%,100%,.15) 2.2%),
+
+      linear-gradient(180deg, hsl(0,0%,78%)  0%,
+      hsl(0,0%,90%) 47%,
+      hsl(0,0%,78%) 53%,
+      hsl(0,0%,70%)100%);
+    color: hsla(0,0%,20%,1);
   }
   &.gold {
-    background: #c9b037;
+    // background: #c9b037;
+    background: #FDE08D;
+    background: -webkit-linear-gradient(top, #DF9F28, #FDE08D, #DF9F28);
+    background: linear-gradient(top, #DF9F28, #FDE08D, #DF9F28);
+    color: hsla(0,0%,20%,1);
   }
   &.silver {
     background: #b4b4b4;
