--- a/_sass/components/_table.scss
+++ b/_sass/components/_table.scss
@@ -56,11 +56,11 @@ $bw: 3px;  // border width
     color: hsla(0,0%,20%,1);
   }
   &.gold {
-    // background: #c9b037;
-    background: #FDE08D;
-    background: -webkit-linear-gradient(top, #DF9F28, #FDE08D, #DF9F28);
-    background: linear-gradient(top, #DF9F28, #FDE08D, #DF9F28);
-    color: hsla(0,0%,20%,1);
+    background: #c9b037;
+    // background: #FDE08D;
+    // background: -webkit-linear-gradient(top, #DF9F28, #FDE08D, #DF9F28);
+    // background: linear-gradient(top, #DF9F28, #FDE08D, #DF9F28);
+    // color: hsla(0,0%,20%,1);
   }
   &.silver {
     background: #b4b4b4;
