--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,8 +29,9 @@ layout: compress
             <br>Conference
         </h2>
         <p class="hero__meta">11&ndash;15 OCTOBER 2020
-          <br>CENTRE MONT ROYAL, MONTREAL
-          <br>CANADA
+          <!-- <br>CENTRE MONT ROYAL, MONTREAL
+          <br>CANADA -->
+          <br>VIRTUAL CONFERENCE
         </p>
       </div>
 
@@ -39,6 +40,7 @@ layout: compress
     <main class="site__content">
       <section class="blog">
         <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
+          {% include virtual_update_card.html %}
           <div class="dates-container">
             {% include covid_card.html %}
             {% include dates.html %}
