--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -137,7 +137,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   // flex: 1 0 auto;
-  margin: 30px 2.25rem 0;
+  margin: 2.25rem 2.25rem 0;
   max-width: 1200px;
   @include breakpoint($md) {
     // padding-top: 5em;
