Adding ACRCloud as Bronze sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -18,5 +18,10 @@
         <img src="{{ site.baseurl }}/assets/img/sponsors/Cochlear.png">
       </a>
     </div>
+    <div class="bronze-wrapper">
+      <a href="https://www.acrcloud.com/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/ACRCloud.png">
+      </a>
+    </div>
   </div>
 </div>
