Updated links to the tutorials pages

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -24,7 +24,7 @@
       <h3>Main Event</h3>
       <table>
         <tbody>
-          <tr><td>Tutorials</td><td>11 October 2020</td></tr>
+          <tr><td><a href="{{ site.baseurl }}/tutorials/">Tutorials</a></td><td>11 October 2020</td></tr>
           <tr><td>Scientific Program</td><td>12–15 October 2020</td></tr>
         </tbody>
       </table>
