Replacing MTL page with vISMIR2020

--- a/_includes/city.html
+++ b/_includes/city.html
@@ -2,12 +2,12 @@
      itemprop="blogPosts"
      itemscope=""
      itemtype="http://schema.org/BlogPosting">
-  <div class="city-background"  style="background-image: url({{ site.baseurl }}/assets/img/cards/biosphere.jpg)">
+  <div class="city-background"  style="background-image: url({{ site.baseurl }}/assets/img/cards/virtualnetwork.jpg)">
   </div>
-  <a href="{{ site.baseurl }}/Montreal/">
-    <h1> Montréal hosts ISMIR2020 </h1>
+  <a href="{{ site.baseurl }}/vISMIR2020/">
+    <h1>ISMIR2020 will be hosted online</h1>
     <div class="description">
-      <p> Montréal’s warmth, cosmopolitan character and geographic accessibility will ensure that the ISMIR2020 conference will be successful and memorable.</p>
+      <p> We are prioritizing peer-to-peer discussions, accessibility, and visibility across time zones to ensure that ISMIR2020 will be successful and memorable.</p>
     </div>
   </a>
 </div>
