--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -4,16 +4,17 @@
       <h3>Deadlines</h3>
       <table>
         <tbody>
-          <tr><td>Call for Papers</td><td>Accepting submissions</td></tr>
+          <tr><td><a href="{{ site.baseurl }}/cfp/">Call for Papers</a></td><td><b>Closed</b></td></tr>
           <tr><td>Abstract Submission</td><td style="text-decoration: line-through;">10 April 2020</td><td>8 May 2020</td></tr>
           <tr><td>Final Submission</td><td style="text-decoration: line-through;">17 April 2020</td><td>15 May 2020</td></tr>
           <tr><td>Notification of Acceptance</td><td style="text-decoration: line-through;">12 June 2020</td><td>10 July 2020</td></tr>
           <tr><td>Camera-ready Upload</td><td style="text-decoration: line-through;">6 July 2020</td><td>3 August 2020</td></tr>
           <tr><td></td><td></td></tr>
+          <tr><td><a href="{{ site.baseurl }}/c4m/">Call for Music</a></td><td><b>Closed</b></td></tr>
           <tr><td>Music Submission</td><td style="text-decoration: line-through;">29 May 2020</td><td>26 June 2020</td></tr>
           <tr><td>Music Notification</td><td style="text-decoration: line-through;">15 July 2020</td><td>31 July 2020</td></tr>
           <tr><td></td><td></td></tr>
-          <tr><td>Call for Tutorials</td><td>Accepting submissions</td></tr>
+          <tr><td><a href="{{ site.baseurl }}/call_for_tutorials/">Call for Tutorials</a></td><td><b>Closed</b></td></tr>
           <tr><td>Initial Submission</td><td style="text-decoration: line-through;">30 April 2020</td><td>22 May 2020</td></tr>
           <tr><td>Final Submission</td><td style="text-decoration: line-through;">22 May 2020</td><td>29 May 2020</td></tr>
           <tr><td>Tutorials Notification</td><td style="text-decoration: line-through;">15 June 2020</td><td>22 June 2020</td></tr>
