Adding the legend about ISMIR@Montreal on the footer instead

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,12 @@
         </a>
       {% endif %}
     </nav>
+    <span>
+      <a href="{{ site.baseurl }}/Montreal/">Originally, ISMIR 2020 was planned to be held at Montreal, Canada.</a>
+      <br/>
+      Following COVID-19 recommendations, it transitioned into an online conference in July 2020.
+    </span>
+    <br/><br/>
     <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. All rights reserved.</span>
   </div>
 </footer>
