--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
       {% endif %}
     </nav>
     <span>
-      <a href="{{ site.baseurl }}/Montreal/">Originally, ISMIR 2020 was planned to be held at Montreal, Canada.</a>
+      <a href="{{ site.baseurl }}/Montreal/">Originally, ISMIR 2020 was planned to be held in Montréal, Canada.</a>
       <br/>
       Following COVID-19 recommendations, it transitioned into an online conference in July 2020.
     </span>
