--- a/_includes/virtual_update_card.html
+++ b/_includes/virtual_update_card.html
@@ -1,3 +1,7 @@
 <div class="virtual-update-card">
-  <p>Due to the ongoing COVID-19 pandemic, <b>ISMIR 2020 will be fully online</b>. The conference will occur October 11–15 with 24 hr programming to facilitate accessibility and visibility across time zones, and in a virtual environment supporting the peer-to-peer discussions that ISMIR has long prioritized. The ISMIR 2020 team looks forward to welcoming our research community to a new conference experience. More details to come.</p>
+  <p>Due to the ongoing COVID-19 pandemic, <b>ISMIR 2020 will be fully online</b>. The conference will occur October
+    11–15 with 24 hr programming to facilitate accessibility and visibility across time zones, and in a virtual
+    environment supporting the peer-to-peer discussions that ISMIR has long prioritized. The ISMIR 2020 team looks
+    forward to welcoming our research community to a new conference experience. We plan to open the registration in the
+    first week of August. More details to come.</p>
 </div>
