Correction in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     <span>
       <a href="{{ site.baseurl }}/Montreal/">Originally, ISMIR 2020 was planned to be held in Montréal, Canada.</a>
       <br/>
-      Following COVID-19 recommendations, it transitioned into an online conference in July 2020.
+      In July 2020, following COVID-19 recommendations, it transitioned into an online conference.
     </span>
     <br/><br/>
     <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. All rights reserved.</span>
