Adding Dolby to sponsors

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -12,6 +12,11 @@
         <img src="{{ site.baseurl }}/assets/img/sponsors/Steinberg.png"/>
       </a>
     </div>
+    <div class="silver-wrapper">
+      <a href="https://www.dolby.com/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Dolby.png"/>
+      </a>
+    </div>
     <h3 class="bronze title">Bronze Sponsors</h3>
     <div class="bronze-wrapper">
       <a href="https://cochlear.ai/">
