--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -5,6 +5,9 @@
     </div>
     <h3 class="gold title">Gold Sponsors</h3>
     <div class="gold-wrapper">
+      <a href="https://www.bytedance.com/en/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/ByteDance.png"/>
+      </a>
     </div>
     <h3 class="silver title">Silver Sponsors</h3>
     <div class="silver-wrapper">
