Adding changes of date to WiMIR in homepage

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -34,7 +34,12 @@
       <h3>Satellite Events</h3>
       <table>
         <tbody>
-          <tr><td><a href="https://wimir.wordpress.com/">WiMIR Workshop</a></td><td>10 October 2020</td></tr>
+          <tr><td><a href="https://wimir.wordpress.com/">WiMIR Workshop</a></td><td style="text-decoration: line-through;">10 October 2020</td></tr>
+          <tr><td></td><td>Multiple Dates:</td></tr>
+          <tr><td></td><td>22 August 2020</td></tr>
+          <tr><td></td><td>5 September 2020</td></tr>
+          <tr><td></td><td>19 September 2020</td></tr>
+          <tr><td></td><td>2 October 2020</td></tr>
           <tr><td>WoRMS</td><td><b>Cancelled</b></td></tr>
           <tr><td><a href="https://dl.acm.org/conference/dlfm">DLfM</a></td><td>16 October 2020</td></tr>
           <tr><td><a href="https://sites.google.com/view/nlp4musa">NLP4MusA</a></td><td>16 October 2020</td></tr>
