--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -4,6 +4,9 @@
       <h3>Deadlines</h3>
       <table>
         <tbody>
+          <tr><td><a href="{{ site.baseurl }}/registration/">Registration</a></td><td>Publication Fee</td><td>17 August 2020</td></tr>
+          <tr><td></td><td>Early Bird Registration</td><td>31 August 2020</td></tr>
+          <tr><td></td><td></td></tr>
           <tr><td><a href="{{ site.baseurl }}/cfp/">Call for Papers</a></td><td><b>Closed</b></td></tr>
           <tr><td>Abstract Submission</td><td style="text-decoration: line-through;">10 April 2020</td><td>8 May 2020</td></tr>
           <tr><td>Final Submission</td><td style="text-decoration: line-through;">17 April 2020</td><td>15 May 2020</td></tr>
