Adding WiMIR@vISMIR deadline dates

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -7,6 +7,8 @@
           <tr><td><a href="{{ site.baseurl }}/registration/">Registration</a></td><td>Publication Fee</td><td>17 August 2020</td></tr>
           <tr><td></td><td>Early Bird Registration</td><td>31 August 2020</td></tr>
           <tr><td></td><td></td></tr>
+          <tr><td><a href="https://bit.ly/WiMIRgrants2020">WiMIR@vISMIR Grants</a></td><td></td><td>30 August 2020</td></tr>
+          <tr><td></td><td></td></tr>
           <tr><td><a href="{{ site.baseurl }}/call_for_lbd/">Call for LBDs</a></td><td><b>Open</b></td></tr>
           <tr><td>Initial Submission</td><td>22 September 2020</td><td></td></tr>
           <tr><td>Revisions (if necessary)</td><td>23-25 September 2020</td><td></td></tr>
