Adding deadlines for videos and posters

--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -9,6 +9,9 @@
           <tr><td></td><td></td></tr>
           <tr><td><a href="https://bit.ly/WiMIRgrants2020">WiMIR@vISMIR Grants</a></td><td></td><td>30 August 2020</td></tr>
           <tr><td></td><td></td></tr>
+          <tr><td><a href="{{ site.baseurl }}/presenter_instructions/">Presenters</a></td><td>Prerecorded video</td><td>14 September 2020</td></tr>
+          <tr><td></td><td>Poster file</td><td>3 October 2020</td></tr>
+          <tr><td></td><td></td></tr>
           <tr><td><a href="{{ site.baseurl }}/call_for_lbd/">Call for LBDs</a></td><td><b>Open</b></td></tr>
           <tr><td>Initial Submission</td><td>22 September 2020</td><td></td></tr>
           <tr><td>Revisions (if necessary)</td><td>23-25 September 2020</td><td></td></tr>
