Adding Sony as a Platinum Sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -2,6 +2,9 @@
   <div class="post-card__inner">
     <h3 class="platinum title">Platinum Sponsors</h3>
     <div class="platinum-wrapper">
+      <a href="https://www.sony.net/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Sony.png">
+      </a>
     </div>
     <h3 class="gold title">Gold Sponsors</h3>
     <div class="gold-wrapper">
