--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -57,7 +57,7 @@
           <tr><td>WoRMS</td><td><b>Cancelled</b></td></tr>
           <tr><td><a href="https://dl.acm.org/conference/dlfm">DLfM</a></td><td>16 October 2020</td></tr>
           <tr><td><a href="https://sites.google.com/view/nlp4musa">NLP4MusA</a></td><td>16 October 2020</td></tr>
-          <tr><td>HAMR</td><td>16–17 October 2020</td></tr>
+          <tr><td><a href="{{ site.baseurl }}/hamr/">HAMR</a></td><td>16–17 October 2020</td></tr>
         </tbody>
       </table>
     </div>
