--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -2,6 +2,11 @@
   <div class="post-card__inner">
     <h3 class="platinum title">Platinum Sponsors</h3>
     <div class="platinum-wrapper">
+      <a href="https://www.spotify.com/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Spotify.png">
+      </a>
+    </div>
+    <div class="platinum-wrapper">
       <a href="https://www.sony.net/">
         <img src="{{ site.baseurl }}/assets/img/sponsors/Sony.png">
       </a>
