--- a/_sass/components/_card.scss
+++ b/_sass/components/_card.scss
@@ -216,7 +216,7 @@
 .dates-container {
   // width: 30%;
   // margin-bottom: 2.25rem;
-  margin-top: 2.25rem;
+  // margin-top: 2.25rem;
   margin-bottom: 2.25rem;
 
   @include breakpoint($md) {
@@ -242,7 +242,7 @@
   @include breakpoint($md) {
     width: 60%;
     padding: 0 0 0 2.25rem;
-    margin-top: 2.25rem;
+    // margin-top: 2.25rem;
   }
   @include breakpoint($lg) {
     width: 70%;
@@ -322,10 +322,12 @@
         margin-bottom: 0;
       }
       @include breakpoint($md) {
+        height: 480px;
         // height: calc(30% - 1.125rem);
       }
       @include breakpoint($lg) {
         width: 48%;
+        height: 550px;
         // height: 45%;
       }
       @include breakpoint($xl) {
@@ -339,11 +341,11 @@
           height: 150px;
         }
         @include breakpoint($md) {
-          height: 100%;
+          height:200px;
         }
-        @include breakpoint($lg) {
-          height: 200px;
-        }
+        // @include breakpoint($lg) {
+        //   height: 200px;
+        // }
       }
       .more-link {
         @include breakpoint($xs) {
@@ -366,7 +368,7 @@
         }
         @include breakpoint($xs) {
           position: absolute;
-          top: 91px;
+          top: 136px;
           background-color: #00000070;
           color: white;
           p a {
@@ -383,10 +385,10 @@
           }
         }
         @include breakpoint($md) {
-          position: absolute;
-          top: 91px;
-          background-color: #00000070;
-          color: white;
+          // position: absolute;
+          // top: 91px;
+          // background-color: #00000070;
+          // color: white;
           p a {
             color: #55f32f;
           }
@@ -420,11 +422,11 @@
           // top: inherit;
         }
         @include breakpoint($md) {
-          position: absolute;
-          top: 0;
+          position: relative;
+          // top: 0;
         }
         @include breakpoint($lg) {
-          position: relative;
+          // position: relative;
           // top: inherit;
         }
       }
@@ -535,8 +537,8 @@
   .post-card__inner {
     div {
       display:flex;
-      margin-top: 10px;
-      margin-bottom: 20px;
+      margin-top: 40px;
+      margin-bottom: 40px;
     }
     h3 {
       display: inline-block;
@@ -635,6 +637,20 @@
     .bronze-wrapper {
       img {
         max-width: 90px;
+      }
+    }
+    @media(max-width: 450px) { // 200 / 330 = .6061
+      .platinum-wrapper img {
+        max-width: 200px;
+      }
+      .gold-wrapper img {
+        max-width: 150px;
+      }
+      .silver-wrapper img {
+        max-width: 120px;
+      }
+      .bronze-wrapper img {
+        max-width: 80px;
       }
     }
   }
