Added institution logos to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,11 @@
 <footer class="footer">
   <div class="container">
+    <div class="institutions">
+      <img id="mcgill-schulich-logo" src="{{ site.baseurl }}/assets/img/logos/Schulich_Horiz_Col_.png">
+      <img id="cirmmt-logo" src="{{ site.baseurl }}/assets/img/logos/CIRMMT_Logo2005BlackHi.gif">
+      <img id="udem-logo" src="{{ site.baseurl }}/assets/img/logos/Logo_UdeM-CMJN.jpg">
+      <img id="sshrc-logo" src="{{ site.baseurl }}/assets/img/logos/sshrc-wordmark-color-eng.jpg">
+    </div>
     <nav class="social">
       {% if site.github_username %}
         <a class="social__link" target="_blank" rel="noopener noreferrer" href="https://github.com/{{ site.github_username }}">
