Adding Sony CSL as a platinum sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -7,8 +7,8 @@
       </a>
     </div>
     <div class="platinum-wrapper">
-      <a href="https://www.sony.net/">
-        <img src="{{ site.baseurl }}/assets/img/sponsors/Sony.png">
+      <a href="https://www.sonycsl.co.jp/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/SonyCSL.png">
       </a>
     </div>
     <h3 class="gold title">Gold Sponsors</h3>
