Adding Musiio as a Sponsor. Changing the url of Sony CSL

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -12,7 +12,7 @@
       </a>
     </div>
     <div class="platinum-wrapper">
-      <a href="https://www.sonycsl.co.jp/">
+      <a href="https://csl.sony.fr/">
         <img src="{{ site.baseurl }}/assets/img/sponsors/SonyCSL.png">
       </a>
     </div>
@@ -45,6 +45,11 @@
     <div class="bronze-wrapper">
       <a href="https://www.acrcloud.com/">
         <img src="{{ site.baseurl }}/assets/img/sponsors/ACRCloud.png">
+      </a>
+    </div>
+    <div class="bronze-wrapper">
+      <a href="https://www.musiio.com/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Musiio.png">
       </a>
     </div>
   </div>
