Adding Google and Musixmatch as Sponsors

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -52,5 +52,15 @@
         <img src="{{ site.baseurl }}/assets/img/sponsors/Musiio.png">
       </a>
     </div>
+    <div class="bronze-wrapper">
+      <a href="https://research.google/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Google.png">
+      </a>
+    </div>
+    <div class="bronze-wrapper">
+      <a href="https://www.musixmatch.com/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Musixmatch.png">
+      </a>
+    </div>
   </div>
 </div>
