Adding Adobe as a Sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -23,6 +23,11 @@
         <img src="{{ site.baseurl }}/assets/img/sponsors/ByteDance.png"/>
       </a>
     </div>
+    <div class="gold-wrapper">
+      <a href="https://www.adobe.com/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Adobe.png"/>
+      </a>
+    </div>
     <hr>
     <h3 class="silver title">Silver Sponsors</h3>
     <div class="silver-wrapper">
