Adding Chordify as Silver Sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -40,6 +40,11 @@
         <img src="{{ site.baseurl }}/assets/img/sponsors/Dolby.png"/>
       </a>
     </div>
+    <div class="silver-wrapper">
+      <a href="https://chordify.net/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Chordify.png"/>
+      </a>
+    </div>
     <hr>
     <h3 class="bronze title">Bronze Sponsors</h3>
     <div class="bronze-wrapper">
