Adding SiriuxmPandora as Sponsor for ISMIR

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -72,5 +72,10 @@
         <img src="{{ site.baseurl }}/assets/img/sponsors/Musixmatch.png">
       </a>
     </div>
+    <div class="bronze-wrapper">
+      <a href="https://www.siriusxm.com/pandora">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/SiriusxmPandora.png">
+      </a>
+    </div>
   </div>
 </div>
