Adding ISMIR logo to the organizers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
       <img id="cirmmt-logo" src="{{ site.baseurl }}/assets/img/logos/CIRMMT_Logo2005BlackHi.gif">
       <img id="udem-logo" src="{{ site.baseurl }}/assets/img/logos/Logo_UdeM-CMJN.jpg">
       <img id="sshrc-logo" src="{{ site.baseurl }}/assets/img/logos/sshrc-wordmark-color-eng.jpg">
+      <img id="ismir-org-logo" src="{{ site.baseurl }}/assets/img/logos/ISMIR-Organization.png">
     </div>
     <nav class="social">
       {% if site.github_username %}
