Change the url in Pandora's logo

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -73,7 +73,7 @@
       </a>
     </div>
     <div class="bronze-wrapper">
-      <a href="https://www.siriusxm.com/pandora">
+      <a href="https://jobs.jobvite.com/siriusxm/">
         <img src="{{ site.baseurl }}/assets/img/sponsors/SiriusxmPandora.png">
       </a>
     </div>
