--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <nav class="header__links" style="background-color: #fff">
         <div class="container header__links-wrapper">
           {% for item in site.navigation %}
-            <a class="header__link" href="{{ item.link | relative_url }}" itemprop="url">
+            <a class="header__link" href="{{ item.link | relative_url }}/" itemprop="url">
               <span itemprop="name">{{ item.name }}</span>
             </a>
           {% endfor %}
