Adding Yousician as bronze sponsor

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -77,5 +77,10 @@
         <img src="{{ site.baseurl }}/assets/img/sponsors/SiriusxmPandora.png">
       </a>
     </div>
+    <div class="bronze-wrapper">
+      <a href="https://yousician.com/">
+        <img src="{{ site.baseurl }}/assets/img/sponsors/Yousician.png">
+      </a>
+    </div>
   </div>
 </div>
